--- a/_posts/2015-09-21-lecture-4.md
+++ b/_posts/2015-09-21-lecture-4.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Lecture 4: Homeostasis"
+title:  "Lecture 4: Energy"
 date:   2015-08-28
 category: notes
 ---
 
-### Lecture 4 on Phylogeography and biogeography is <a href="{{ site.baseurl }}/assets/lectures/11_energy_novids">here</a>
+### Lecture 4 on Energy is <a href="{{ site.baseurl }}/assets/lectures/11_energy_novids">here</a>
